123025/simple-code-no-refactor/03-igw.tf
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "terraform-vars-lab-dev-igw"
  }
}
